--- a/_config.yml
+++ b/_config.yml
@@ -13,8 +13,10 @@ picture: assets/images/profile_cyy.jpg
 # If you want to include your resume, set to true
 # and specify source (external or local).
 resume: true
-resume-external: true
-resume-url: https://google.com/?q=my+resume
+#resume-external: true
+#resume-url: https://google.com/?q=my+resume
+resume-external: false
+resume: assets/images/Yaoyao_Cai Resume.pdf
 
 url: https://sergiokopplin.github.io/indigo
 # your url: https://USERNAME.github.io
