--- a/_config.yml
+++ b/_config.yml
@@ -52,7 +52,7 @@ github: mygithub
 #medium: medium
 # vimeo: myvimeo
 # lanyrd: mylanyrd
-email: myemail@gmail.com
+email: cai.yao@northeastern.edu
 
 authors:
   johndoe:
