--- a/_config.yml
+++ b/_config.yml
@@ -40,7 +40,7 @@ disqus:
 #twitter: mytwitter
 # instagram: myinstagram
 # pinterest: mypinterest
-linkedin: mylinkedin
+linkedin: yaoyao-cai-071226194
 # youtube: myyoutube
 # spotify: myspotify
 github: mygithub
