--- a/_config.yml
+++ b/_config.yml
@@ -43,7 +43,7 @@ disqus:
 linkedin: yaoyao-cai-071226194
 # youtube: myyoutube
 # spotify: myspotify
-github: mygithub
+github: yaoyaocai?tab=repositories
 # gitlab: mygitlab
 # lastfm: mylastfm
 # stackoverflow: 7044681/mystackoverflow
