--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ resume: true
 #resume-external: true
 #resume-url: https://google.com/?q=my+resume
 resume-local: true
-resume: assets/Resume.pdf
+resume-pdf: assets/Resume.pdf
 
 #url: https://sergiokopplin.github.io/indigo
 # your url: https://USERNAME.github.io
