--- a/_config.yml
+++ b/_config.yml
@@ -15,8 +15,8 @@ picture: assets/images/IMG_0755.JPG
 resume: true
 #resume-external: true
 #resume-url: https://google.com/?q=my+resume
-resume-local: true
-resume-pdf: assets/Resume.pdf
+resume-external: false
+resume-local: assets/Resume.pdf
 
 #url: https://sergiokopplin.github.io/indigo
 # your url: https://USERNAME.github.io
