--- a/_config.yml
+++ b/_config.yml
@@ -8,7 +8,7 @@ description: A blog about technology and stuff related
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: assets/images/IMG_0755.JPG
+picture: assets/images/profile_cyy.JPG
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
