--- a/_config.yml
+++ b/_config.yml
@@ -8,15 +8,15 @@ description: A blog about technology and stuff related
 # if it's an external image, update below for true
 # better with square images
 external-image: false
-picture: assets/images/profile_cyy.JPG
+picture: assets/images/profile_cyy.jpg
 
 # If you want to include your resume, set to true
 # and specify source (external or local).
 resume: true
-#resume-external: true
-#resume-url: https://google.com/?q=my+resume
-resume-external: false
-resume-pdf: assets/Resume.pdf
+resume-external: true
+resume-url: assets/Resume.pdf
+#resume-external: false
+#resume-pdf: assets/Resume.pdf
 
 #url: https://sergiokopplin.github.io/indigo
 # your url: https://USERNAME.github.io
