--- a/_config.yml
+++ b/_config.yml
@@ -14,9 +14,8 @@ picture: assets/images/profile_cyy.jpg
 # and specify source (external or local).
 resume: true
 resume-external: true
+#resume-url: https://google.com/?q=my+resume
 resume-url: assets/Resume.pdf
-#resume-external: false
-#resume-pdf: assets/Resume.pdf
 
 #url: https://sergiokopplin.github.io/indigo
 # your url: https://USERNAME.github.io
