--- a/_config.yml
+++ b/_config.yml
@@ -72,7 +72,11 @@ authors:
     bio: Enjoy the little things in life
     external-image: false
     picture: assets/images/profile_cyy.jpg
-
+  yaoyaocai:
+    name: Yaoyao Cai
+    bio: Enjoy the little things in life
+    external-image: false
+    picture: assets/images/profile_cyy.jpg
     
 
 # do you want a larger site? change the option below
